# autoresearch-cycle

./: .gitignore  README.md  pyproject.toml
docs/: examples.md  interfaces.md  prd.md  setup.md
examples/blogui/: config.py  domain.py  main.py  run.py  run.sh
examples/synthetic/: baseline-policy.json  expected-run.json  experiment.json
src/autoresearch_cycle/: __init__.py  api.py  cli.py  models.py  services.py  storage.py  utils.py
src/autoresearch_cycle/adapters/: __init__.py  base.py  synthetic.py
src/autoresearch_cycle/optimizers/: __init__.py  base.py  random_optimizer.py
tests/: test_integration.py  test_optimizer.py  test_storage.py
